--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "sever.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  
+  },
+  "script":{
+    "start":"nodemon sever.js"
   },
   "author": "thanhtai",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
