--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "sever.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  
   },
-  "script":{
-    "start":"nodemon sever.js"
+  "script": {
+    "start": "nodemon sever.js"
   },
   "author": "thanhtai",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
